--- a/index.css
+++ b/index.css
@@ -14,22 +14,6 @@ img {
   height: 240px;
 }
 
-img:not([src]) {
-  visibility: hidden;
-}
-
-ol {
-  padding-left: 1em;
-}
-
-ol li {
-  margin-top: 0.5em;
-}
-
-ol ol {
-  list-style-type: lower-alpha;
-}
-
 .intro {
   padding: 1px 1em;
 }
@@ -59,6 +43,31 @@ ol ol {
   opacity: 0;
   -webkit-transition: opacity 0.5s;
   transition: opacity 0.5s;
+}
+
+ol {
+  padding-left: 1em;
+}
+
+ol li {
+  margin-top: 0.5em;
+}
+
+ol ol {
+  list-style-type: lower-alpha;
+}
+
+body {
+  font-family: sans-serif;
+}
+
+h1,
+h2 {
+  font-family: serif;
+}
+
+img:not([src]) {
+  visibility: hidden;
 }
 
 .product-image__b.loaded:hover {
