--- a/_layout.scss
+++ b/_layout.scss
@@ -1,17 +1,20 @@
+$imgWidth: 160px;
+$imgHeight: 240px;
+
 html {
 	background: grey;
 }
 
 body {
-	max-width: 320px;
+	max-width: $imgWidth * 4;
 	margin: 0 auto;
 	background: white;
 }
 
 img {
 	display: block;
-	width: 160px;
-	height: 240px;
+	width: $imgWidth;
+	height: $imgHeight;
 }
 
 .intro {
@@ -25,8 +28,8 @@ img {
 
 .product {
 	position: relative;
-	width: 160px;
-	height: 240px;
+	width: $imgWidth;
+	height: $imgHeight;
 }
 
 .product-image__a,
