--- a/_layout.scss
+++ b/_layout.scss
@@ -32,12 +32,24 @@ body {
 .product {
 	display: block;
 	position: relative;
-	width: 50%;
 	text-align: center;
+	text-decoration: none;
 	img {
 		display: block;
 		width: $imgWidth;
 		height: $imgHeight;
+	}
+	&:hover {
+		.product-image__b.loaded {
+			opacity: 1;
+		}
+	}
+	width: percentage(1/2);
+	@media (min-width: $imgWidth*3) {
+		width: percentage(1/3);
+	}
+	@media (min-width: $imgWidth*4) {
+		width: percentage(1/4);
 	}
 }
 
