--- a/index.css
+++ b/index.css
@@ -35,14 +35,31 @@ body {
 .product {
   display: block;
   position: relative;
-  width: 50%;
   text-align: center;
+  text-decoration: none;
+  width: 50%;
 }
 
 .product img {
   display: block;
   width: 160px;
   height: 240px;
+}
+
+.product:hover .product-image__b.loaded {
+  opacity: 1;
+}
+
+@media (min-width: 480px) {
+  .product {
+    width: 33.33333%;
+  }
+}
+
+@media (min-width: 640px) {
+  .product {
+    width: 25%;
+  }
 }
 
 .product-image__a {
@@ -81,9 +98,5 @@ h2 {
 
 img:not([src]) {
   visibility: hidden;
-}
-
-.product:hover .product-image__b.loaded {
-  opacity: 1;
 }
 /*# sourceMappingURL=index.css.map */
