--- a/_layout.scss
+++ b/_layout.scss
@@ -7,15 +7,15 @@ html {
 	box-sizing: inherit;
 }
 
-$imgWidth: 160px;
-$imgHeight: 240px;
+$imgWidth: 305px;
+$imgHeight: 360px;
 
 html {
 	background: grey;
 }
 
 body {
-	max-width: 1024px;
+	max-width: 1280px;
 	margin: 0 auto;
 	background: white;
 }
@@ -27,6 +27,7 @@ body {
 .products {
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: space-between;
 }
 
 .product {
@@ -44,13 +45,14 @@ body {
 			opacity: 1;
 		}
 	}
-	width: percentage(1/2);
+	width: $imgWidth;
+	/*width: percentage(1/2);
 	@media (min-width: $imgWidth*3) {
 		width: percentage(1/3);
 	}
 	@media (min-width: $imgWidth*4) {
 		width: percentage(1/4);
-	}
+	}*/
 }
 
 .product-image__a {
