--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-  max-width: 1024px;
+  max-width: 1280px;
   margin: 0 auto;
   background: white;
 }
@@ -30,6 +30,9 @@ body {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .product {
@@ -37,29 +40,24 @@ body {
   position: relative;
   text-align: center;
   text-decoration: none;
-  width: 50%;
+  width: 305px;
+  /*width: percentage(1/2);
+	@media (min-width: $imgWidth*3) {
+		width: percentage(1/3);
+	}
+	@media (min-width: $imgWidth*4) {
+		width: percentage(1/4);
+	}*/
 }
 
 .product img {
   display: block;
-  width: 160px;
-  height: 240px;
+  width: 305px;
+  height: 360px;
 }
 
 .product:hover .product-image__b.loaded {
   opacity: 1;
-}
-
-@media (min-width: 480px) {
-  .product {
-    width: 33.33333%;
-  }
-}
-
-@media (min-width: 640px) {
-  .product {
-    width: 25%;
-  }
 }
 
 .product-image__a {
@@ -72,7 +70,7 @@ body {
   transition: opacity 0.5s;
   position: absolute;
   top: 0;
-  left: calc(50% - 160px / 2);
+  left: calc(50% - 305px / 2);
 }
 
 ol {
